--- a/projetos/projeto cordel/cordel.html
+++ b/projetos/projeto cordel/cordel.html
@@ -99,6 +99,6 @@
         </p>
     </section>
     
-    <footer><p>Made by <span>Hanna Boppe</span></p></footer>
+    <footer><p>Made by <span><a href="https://github.com/hboppe" target="_blank">Hanna Boppe</a></span></p></footer>
 </body>
 </html>
